aws/cloudformation/templates/vault.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "",

  "Parameters": { },

  "Resources": {

    "InstanceSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "Tags": [{
          "Key": "Application",
          "Value": "Vault"
        }],
        "VpcId": { "Ref": "VpcId" },
        "GroupDescription": "Enable HTTP access and SSH access",
        "SecurityGroupIngress": [{
          "ToPort": "8200",
          "FromPort": "8200",
          "IpProtocol": "tcp",
          "SourceSecurityGroupId": { "Ref": "ELBSG" }
        },{
          "CidrIp": { "Ref": "MgtCidr" },
          "ToPort": "22",
          "FromPort": "22",
          "IpProtocol": "tcp"
        }]
      }
    },

 		"ELBSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "Tags": [{
          "Key": "Application",
          "Value": "Vault"
        }],
        "GroupDescription": "Enable HTTP access on port 80",
        "VpcId": { "Ref": "VpcId" },
        "SecurityGroupIngress": [{
          "CidrIp": { "Ref": "MgtCidr" },
          "ToPort": "80",
          "FromPort": "80",
          "IpProtocol": "tcp"
        },{
          "CidrIp": "0.0.0.0/0",
          "ToPort": "80",
          "FromPort": "80",
          "IpProtocol": "tcp"
        }]
      }
    },

    "Vault": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "MinSize": "1",
        "MaxSize": "3",
        "DesiredCapacity": "1",
        "AvailabilityZones": { "Ref": "Zones" },
        "VPCZoneIdentifier": { "Ref": "Subnets" },
        "LoadBalancerNames": [{ "Ref": "InternalELB" },{ "Ref": "ExternalELB"}],
        "LaunchConfigurationName": { "Ref": "VaultLC" }
      },
      "CreationPolicy": {
        "ResourceSignal": {
          "Timeout": "PT15M"
        }
      },
      "UpdatePolicy": {
        "AutoScalingRollingUpdate": {
          "PauseTime": "PT15M",
          "MaxBatchSize": "1",
          "WaitOnResourceSignals": "true",
          "MinInstancesInService": "1"
        }
      }
    },

    "VaultLC": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Metadata": {
        "Comment": "Bootstrap a new Vault instance.",
        "AWS::CloudFormation::Init": {
          "configSets": {
            "base_install": [
              "cfn",
              "cw_logs",
              "cw_collectd",
              "chef_base"
            ]
          }
        }
      },

      "Properties": {
        "KeyName": { "Ref": "KeyName" },
        "ImageId": { "Ref": "ImageId" },
        "UserData": { "Fn::Base64": { "Fn::Join": ["", [
          "#!/bin/bash -xe\n",
          "/opt/aws/bin/cfn-init -v ",
          " --stack ", { "Ref": "AWS::StackName" },
          " --configsets base_install ",
          " --resource VaultLC ",
          " --region ", { "Ref": "AWS::Region" }, "\n",

          { "DevOpsMod": "chef-client" },

          "/opt/aws/bin/cfn-signal -e $? ",
          " --stack ", { "Ref": "AWS::StackName" },
          " --resource Vault ",
          " --region ", { "Ref": "AWS::Region" }, "\n"
        ]]}},
        "InstanceType": { "Ref": "InstanceType" },
        "SecurityGroups": [{ "Ref": "InstanceSG" }],
        "IamInstanceProfile": { "Ref": "RootInstanceProfile" },
        "InstanceMonitoring": "false",
        "AssociatePublicIpAddress": "true"
      }
    },

    "ExternalELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
				"Tags": [{
          "Key": "Version",
          "Value": { "Ref": "StackVersion" }
        },{
          "Key": "Name",
          "Value": "Vault"
        },{
          "Key": "Role",
          "Value": "External"
        }],
        "Subnets": { "Ref": "Subnets" },
        "CrossZone": "true",
        "Listeners": [{
          "Protocol": "TCP",
          "InstancePort": "8200",
          "LoadBalancerPort": "80"
        }],
        "HealthCheck": {
          "Target": "HTTP:8200/v1",
          "Timeout": "2",
          "Interval": "5",
          "HealthyThreshold": "3",
          "UnhealthyThreshold": "5"
        },
        "SecurityGroups": [{ "Ref": "ELBSG" }]
      }
    },

    "InternalELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
				"Tags": [{
          "Key": "Version",
          "Value": { "Ref": "StackVersion" }
        },{
          "Key": "Name",
          "Value": "Vault"
        },{
          "Key": "Role",
          "Value": "Internal"
        }],
        "Scheme": "internal",
        "Subnets": { "Ref": "Subnets" },
        "CrossZone": "true",
        "Listeners": [{
          "Protocol": "HTTP",
          "InstancePort": "8200",
          "LoadBalancerPort": "80"
        }],
        "HealthCheck": {
          "Target": "HTTP:8200/v1",
          "Timeout": "2",
          "Interval": "5",
          "HealthyThreshold": "3",
          "UnhealthyThreshold": "5"
        },
        "SecurityGroups": [{ "Ref": "ELBSG" }]
      }
    }

  },

  "Outputs": { }
}
